--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@ body {
 }
 
 h1 {
+    color: red;
+    font-size: 200%;
+    text-align: center;
+}
+
+h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: purple;
     font-size: medium;
